--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
 	<h2 class="title text-center">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" width="1224" height="1632" alt="Concert dans un stade"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" width="2000" height="3000" alt="Représentant d'une entreprise"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" width="2042" height="1382" alt="Réunion en entreprise"/>
-			<img data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" width="2227" height="1781" alt="Mariés s'échangeant leurs voeux"/>
-			<img data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" width="1106" height="1658" alt="Portrait tête-épaules de face d'un homme fermant fortement les yeux "/>
-			<img data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" width="2240" height="3360" alt="Mariés avant le lancer du bouquet"/>
-			<img data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" width="2012" height="3024" alt="Portrait buste de face d'une femme"/>
-			<img data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" width="2617" height="1745" alt="Chanteur animant le public"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" width="3000" height="1837" alt="Femme riant à son bureau en entreprise"/>
+			<img data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" width="1224" height="1632" alt="Photographie d'un concert dans un stade rempli de monde"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" width="2000" height="3000" alt="Photographie de face d'un représentant d'une entreprise"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" width="2042" height="1382" alt="Photographie d'une femme souriant lors d'une réunion en entreprise"/>
+			<img data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" width="2227" height="1781" alt="Photographie des mains de mariés s'échangeant leurs vœux"/>
+			<img data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" width="1106" height="1658" alt="Portrait tête-épaules de face d'un homme fermant fortement les yeux"/>
+			<img data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" width="2240" height="3360" alt="Photographie des mariés avant le lancer du bouquet"/>
+			<img data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" width="2012" height="3024" alt="Portrait buste de face d'une femme se tenant derrière des grilles"/>
+			<img data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" width="2617" height="1745" alt="Photographie d'un chanteur animant le public en levant sa main"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" width="3000" height="1837" alt="Photographie d'une femme riant à son bureau en entreprise"/>
 		</div>
 	</div>
 	<div class="quote fst-italic m-auto">
