--- a/index.html
+++ b/index.html
@@ -168,13 +168,28 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" width="4540" height="2100" class="d-block w-100" alt="Homme marchant sur un passage piéton">
+						<img
+						srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg 1400w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_tablet.jpg 768w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_mobile.jpg 375w"
+						sizes="(max-width: 768px) 375px,
+							1400px"
+						src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
+						width="4540" height="2100" class="d-block w-100" alt="Homme marchant sur un passage piéton">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" width="6000" height="2775" class="d-block w-100" alt="Public acclamant l'animateur">
+						<img
+						srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg 1400w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_tablet.jpg 768w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_mobile.jpg 375w"
+						sizes="(max-width: 768px) 375px,
+							1400px"
+						src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg"
+						width="6000" height="2775" class="d-block w-100" alt="Public acclamant l'animateur">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" width="5653" height="2613" class="d-block w-100" alt="Scène de mariage">
+						<img
+						srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg 1400w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_tablet.jpg 768w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_mobile.jpg 375w"
+						sizes="(max-width: 768px) 375px,
+							1400px"
+						src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg"
+						width="5653" height="2613" class="d-block w-100" alt="Scène de mariage">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -190,7 +205,12 @@
 		<main>
 			<section id="about" class="d-flex position-relative align-items-center">
 				<div class="picture left">
-					<img class="w-100 pic-left-wh" src="./assets/images/nina.jpg" width="730" height="728" alt="Photographie de Nina">
+					<img
+					srcset="./assets/images/nina.jpg 1400w, ./assets/images/nina_tablet.jpg 768w, ./assets/images/nina_mobile.jpg 375w"
+					sizes="(max-width: 768px) 375px,
+						1400px"
+					src="./assets/images/nina.jpg"
+					width="730" height="728" class="w-100 pic-left-wh" alt="Photographie de Nina">
 				</div>
 				<div id="about-me">
 					<h2 class="about-me__title">A propos de moi</h2>
@@ -203,15 +223,69 @@
 				<h2 class="title text-center">Portfolio</h2>
 				<div class="container py-3">
 					<div class="gallery" style="display: none">
-						<img data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" width="1224" height="1632" alt="Photographie d'un concert dans un stade rempli de monde">
-						<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" width="2000" height="3000" alt="Photographie de face d'un représentant d'une entreprise">
-						<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" width="2042" height="1382" alt="Photographie d'une femme souriant lors d'une réunion en entreprise">
-						<img data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" width="2227" height="1781" alt="Photographie des mains de mariés s'échangeant leurs vœux">
-						<img data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" width="1106" height="1658" alt="Portrait tête-épaules de face d'un homme fermant fortement les yeux">
-						<img data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" width="2240" height="3360" alt="Photographie des mariés avant le lancer du bouquet">
-						<img data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" width="2012" height="3024" alt="Portrait buste de face d'une femme se tenant derrière des grilles">
-						<img data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" width="2617" height="1745" alt="Photographie d'un chanteur animant le public en levant sa main">
-						<img data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" width="3000" height="1837" alt="Photographie d'une femme riant à son bureau en entreprise">
+						<img
+						srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg 1400w, ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_tablet.jpg 768w, ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash_mobile.jpg 375w"
+						sizes="(max-width: 768px) 375px,
+							1400px"
+						 src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
+						 data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100 gallery-wh"
+						 width="1224" height="1632" alt="Photographie d'un concert dans un stade rempli de monde">
+						<img
+						srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg 1400w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_tablet.jpg 768w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash_mobile.jpg 375w"
+						sizes="(max-width: 768px) 375px,
+							1400px"
+						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
+						data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh"
+						width="2000" height="3000" alt="Photographie de face d'un représentant d'une entreprise">
+						<img
+						srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg 1400w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_tablet.jpg 768w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash_mobile.jpg 375w"
+						sizes="(max-width: 768px) 375px,
+							1400px"
+						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
+						data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh"
+						width="2042" height="1382" alt="Photographie d'une femme souriant lors d'une réunion en entreprise">
+						<img
+						srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg 1400w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_tablet.jpg 768w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash_mobile.jpg 375w"
+						sizes="(max-width: 768px) 375px,
+							1400px"
+						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
+						data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100 gallery-wh"
+						width="2227" height="1781" alt="Photographie des mains de mariés s'échangeant leurs vœux">
+						<img
+						srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg 1400w, ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_tablet.jpg 768w, ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash_mobile.jpg 375w"
+						sizes="(max-width: 768px) 375px,
+							1400px"
+						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+						data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100 gallery-wh"
+						width="1106" height="1658" alt="Portrait tête-épaules de face d'un homme fermant fortement les yeux">
+						<img
+						srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg 1400w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_tablet.jpg 768w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash_mobile.jpg 375w"
+						sizes="(max-width: 768px) 375px,
+							1400px"
+						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+						data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100 gallery-wh"
+						width="2240" height="3360" alt="Photographie des mariés avant le lancer du bouquet">
+						<img
+						srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg 1400w, ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_tablet.jpg 768w, ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash_mobile.jpg 375w"
+						sizes="(max-width: 768px) 375px,
+							1400px"
+						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
+						data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100 gallery-wh"
+						width="2012" height="3024" alt="Portrait buste de face d'une femme se tenant derrière des grilles">
+						<img
+						srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg 1400w, ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_tablet.jpg 768w, ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash_mobile.jpg 375w"
+						sizes="(max-width: 768px) 375px,
+							1400px"
+						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
+						data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100 gallery-wh"
+						width="2617" height="1745" alt="Photographie d'un chanteur animant le public en levant sa main">
+						<img
+						srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg 1400w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_tablet.jpg 768w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash_mobile.jpg 375w"
+						sizes="(max-width: 768px) 375px,
+							1400px"
+						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
+						data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh"
+						width="3000" height="1837" alt="Photographie d'une femme riant à son bureau en entreprise">
 					</div>
 				</div>
 				<div class="quote fst-italic m-auto">
@@ -288,7 +362,12 @@
 						</form>
 					</div>
 					<div class="picture right">
-						<img class="w-100 pic-right-wh" src="./assets/images/camera.jpg" width="1012" height="1010" alt="Caméra">
+						<img
+						srcset="./assets/images/camera.jpg 1400w, ./assets/images/camera_tablet.jpg 768w, ./assets/images/camera_mobile.jpg 375w"
+						sizes="(max-width: 768px) 375px,
+							1400px"
+						class="w-100 pic-right-wh" src="./assets/images/camera.jpg"
+						width="1012" height="1010" alt="Caméra">
 					</div>
 				</div>
 				<div class="contact-info position-relative">
