--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<img
-						srcset="./assets/images/slider/ryoji-iwata.jpg 1400w, ./assets/images/slider/ryoji-iwata_tablet.jpg 768w, ./assets/images/slider/ryoji-iwata_mobile.jpg 375w"
+						srcset="./assets/images/slider/ryoji-iwata.jpg 1400w, ./assets/images/slider/ryoji-iwata_tablet.jpg 768w, ./assets/images/slider/ryoji-iwata_mobile.webp 375w"
 						sizes="(max-width: 768px) 375px,
 							1400px"
 						src="./assets/images/slider/ryoji-iwata.jpg"
@@ -177,7 +177,7 @@
 					</div>
 					<div class="carousel-item">
 						<img
-						srcset="./assets/images/slider/nicholas-green.jpg 1400w, ./assets/images/slider/nicholas-green_tablet.jpg 768w, ./assets/images/slider/nicholas-green_mobile.jpg 375w"
+						srcset="./assets/images/slider/nicholas-green.jpg 1400w, ./assets/images/slider/nicholas-green_tablet.jpg 768w, ./assets/images/slider/nicholas-green_mobile.webp 375w"
 						sizes="(max-width: 768px) 375px,
 							1400px"
 						src="./assets/images/slider/nicholas-green.jpg"
@@ -185,7 +185,7 @@
 					</div>
 					<div class="carousel-item">
 						<img
-						srcset="./assets/images/slider/edward-cisneros.jpg 1400w, ./assets/images/slider/edward-cisneros_tablet.jpg 768w, ./assets/images/slider/edward-cisneros_mobile.jpg 375w"
+						srcset="./assets/images/slider/edward-cisneros.jpg 1400w, ./assets/images/slider/edward-cisneros_tablet.jpg 768w, ./assets/images/slider/edward-cisneros_mobile.webp 375w"
 						sizes="(max-width: 768px) 375px,
 							1400px"
 						src="./assets/images/slider/edward-cisneros.jpg"
@@ -206,7 +206,7 @@
 			<section id="about" class="d-flex position-relative align-items-center">
 				<div class="picture left">
 					<img
-					srcset="./assets/images/nina.jpg 1400w, ./assets/images/nina_tablet.jpg 768w, ./assets/images/nina_mobile.jpg 375w"
+					srcset="./assets/images/nina.jpg 1400w, ./assets/images/nina_tablet.jpg 768w, ./assets/images/nina_mobile.webp 375w"
 					sizes="(max-width: 768px) 375px,
 						1400px"
 					src="./assets/images/nina.jpg"
@@ -224,63 +224,63 @@
 				<div class="container py-3">
 					<div class="gallery" style="display: none">
 						<img
-						srcset="./assets/images/gallery/concerts/aaron-paul.jpg 1400w, ./assets/images/gallery/concerts/aaron-paul_tablet.jpg 768w, ./assets/images/gallery/concerts/aaron-paul_mobile.jpg 375w"
+						srcset="./assets/images/gallery/concerts/aaron-paul.jpg 1400w, ./assets/images/gallery/concerts/aaron-paul_tablet.jpg 768w, ./assets/images/gallery/concerts/aaron-paul_mobile.webp 375w"
 						sizes="(max-width: 768px) 375px,
 							1400px"
 						 src="./assets/images/gallery/concerts/aaron-paul.jpg"
 						 data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100 gallery-wh"
 						 width="1224" height="1632" alt="Photographie d'un concert dans un stade rempli de monde">
 						<img
-						srcset="./assets/images/gallery/entreprise/ali-morshedlou.jpg 1400w, ./assets/images/gallery/entreprise/ali-morshedlou_tablet.jpg 768w, ./assets/images/gallery/entreprise/ali-morshedlou_mobile.jpg 375w"
+						srcset="./assets/images/gallery/entreprise/ali-morshedlou.jpg 1400w, ./assets/images/gallery/entreprise/ali-morshedlou_tablet.jpg 768w, ./assets/images/gallery/entreprise/ali-morshedlou_mobile.webp 375w"
 						sizes="(max-width: 768px) 375px,
 							1400px"
 						src="./assets/images/gallery/entreprise/ali-morshedlou.jpg"
 						data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh"
 						width="2000" height="3000" alt="Photographie de face d'un représentant d'une entreprise">
 						<img
-						srcset="./assets/images/gallery/entreprise/jason-goodman.jpg 1400w, ./assets/images/gallery/entreprise/jason-goodman_tablet.jpg 768w, ./assets/images/gallery/entreprise/jason-goodman_mobile.jpg 375w"
+						srcset="./assets/images/gallery/entreprise/jason-goodman.jpg 1400w, ./assets/images/gallery/entreprise/jason-goodman_tablet.jpg 768w, ./assets/images/gallery/entreprise/jason-goodman_mobile.webp 375w"
 						sizes="(max-width: 768px) 375px,
 							1400px"
 						src="./assets/images/gallery/entreprise/jason-goodman.jpg"
 						data-gallery-tag="Entreprises" class="gallery-item w-100 position-absolute h-100 gallery-wh"
 						width="2042" height="1382" alt="Photographie d'une femme souriant lors d'une réunion en entreprise">
 						<img
-						srcset="./assets/images/gallery/mariage/hannah-busing.jpg 1400w, ./assets/images/gallery/mariage/hannah-busing_tablet.jpg 768w, ./assets/images/gallery/mariage/hannah-busing_mobile.jpg 375w"
+						srcset="./assets/images/gallery/mariage/hannah-busing.jpg 1400w, ./assets/images/gallery/mariage/hannah-busing_tablet.jpg 768w, ./assets/images/gallery/mariage/hannah-busing_mobile.webp 375w"
 						sizes="(max-width: 768px) 375px,
 							1400px"
 						src="./assets/images/gallery/mariage/hannah-busing.jpg"
 						data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100 gallery-wh"
 						width="2227" height="1781" alt="Photographie des mains de mariés s'échangeant leurs vœux">
 						<img
-						srcset="./assets/images/gallery/portraits/ade-tunji.jpg 1400w, ./assets/images/gallery/portraits/ade-tunji_tablet.jpg 768w, ./assets/images/gallery/portraits/ade-tunji_mobile.jpg 375w"
+						srcset="./assets/images/gallery/portraits/ade-tunji.jpg 1400w, ./assets/images/gallery/portraits/ade-tunji_tablet.jpg 768w, ./assets/images/gallery/portraits/ade-tunji_mobile.webp 375w"
 						sizes="(max-width: 768px) 375px,
 							1400px"
 						src="./assets/images/gallery/portraits/ade-tunji.jpg"
 						data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100 gallery-wh"
 						width="1106" height="1658" alt="Portrait tête-épaules de face d'un homme fermant fortement les yeux">
 						<img
-						srcset="./assets/images/gallery/mariage/jakob-owens.jpg 1400w, ./assets/images/gallery/mariage/jakob-owens_tablet.jpg 768w, ./assets/images/gallery/mariage/jakob-owens_mobile.jpg 375w"
+						srcset="./assets/images/gallery/mariage/jakob-owens.jpg 1400w, ./assets/images/gallery/mariage/jakob-owens_tablet.jpg 768w, ./assets/images/gallery/mariage/jakob-owens_mobile.webp 375w"
 						sizes="(max-width: 768px) 375px,
 							1400px"
 						src="./assets/images/gallery/mariage/jakob-owens.jpg"
 						data-gallery-tag="Mariages" class="gallery-item w-100 position-absolute h-100 gallery-wh"
 						width="2240" height="3360" alt="Photographie des mariés avant le lancer du bouquet">
 						<img
-						srcset="./assets/images/gallery/portraits/nino-van-prattenburg.jpg 1400w, ./assets/images/gallery/portraits/nino-van-prattenburg_tablet.jpg 768w, ./assets/images/gallery/portraits/nino-van-prattenburg_mobile.jpg 375w"
+						srcset="./assets/images/gallery/portraits/nino-van-prattenburg.jpg 1400w, ./assets/images/gallery/portraits/nino-van-prattenburg_tablet.jpg 768w, ./assets/images/gallery/portraits/nino-van-prattenburg_mobile.webp 375w"
 						sizes="(max-width: 768px) 375px,
 							1400px"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg.jpg"
 						data-gallery-tag="Portrait" class="gallery-item w-100 position-absolute h-100 gallery-wh"
 						width="2012" height="3024" alt="Portrait buste de face d'une femme se tenant derrière des grilles">
 						<img
-						srcset="./assets/images/gallery/concerts/austin-neill.jpg 1400w, ./assets/images/gallery/concerts/austin-neill_tablet.jpg 768w, ./assets/images/gallery/concerts/austin-neill_mobile.jpg 375w"
+						srcset="./assets/images/gallery/concerts/austin-neill.jpg 1400w, ./assets/images/gallery/concerts/austin-neill_tablet.jpg 768w, ./assets/images/gallery/concerts/austin-neill_mobile.webp 375w"
 						sizes="(max-width: 768px) 375px,
 							1400px"
 						src="./assets/images/gallery/concerts/austin-neill.jpg"
 						data-gallery-tag="Concert" class="gallery-item w-100 position-absolute h-100 gallery-wh"
 						width="2617" height="1745" alt="Photographie d'un chanteur animant le public en levant sa main">
 						<img
-						srcset="./assets/images/gallery/entreprise/mateus-campos-felipe.jpg 1400w, ./assets/images/gallery/entreprise/mateus-campos-felipe_tablet.jpg 768w, ./assets/images/gallery/entreprise/mateus-campos-felipe_mobile.jpg 375w"
+						srcset="./assets/images/gallery/entreprise/mateus-campos-felipe.jpg 1400w, ./assets/images/gallery/entreprise/mateus-campos-felipe_tablet.jpg 768w, ./assets/images/gallery/entreprise/mateus-campos-felipe_mobile.webp 375w"
 						sizes="(max-width: 768px) 375px,
 							1400px"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe.jpg"
@@ -363,7 +363,7 @@
 					</div>
 					<div class="picture right">
 						<img
-						srcset="./assets/images/camera.jpg 1400w, ./assets/images/camera_tablet.jpg 768w, ./assets/images/camera_mobile.jpg 375w"
+						srcset="./assets/images/camera.jpg 1400w, ./assets/images/camera_tablet.jpg 768w, ./assets/images/camera_mobile.webp 375w"
 						sizes="(max-width: 768px) 375px,
 							1400px"
 						class="w-100 pic-right-wh" src="./assets/images/camera.jpg"
